Prevent loads starting after docshell destruction.  Bug 332901, r=biesi, sr=darin