docshell/base/nsDSURIContentListener.cpp
@@ -91,6 +91,14 @@ NS_INTERFACE_MAP_END
 NS_IMETHODIMP
 nsDSURIContentListener::OnStartURIOpen(nsIURI* aURI, PRBool* aAbortOpen)
 {
+    // If mDocShell is null here, that means someone's starting a load
+    // in our docshell after it's already been destroyed.  Don't let
+    // that happen.
+    if (!mDocShell) {
+        *aAbortOpen = PR_TRUE;
+        return NS_OK;
+    }
+    
     nsCOMPtr<nsIURIContentListener> parentListener;
     GetParentContentListener(getter_AddRefs(parentListener));
     if (parentListener)
